# beatGame

./: CMakeLists.txt  README.md  main.cpp
Beats/: Beat.cpp  Beat.hpp
Database/: Server.cpp  Server.hpp
Engine/: AudioHelper.cpp  AudioHelper.hpp  FileIO.cpp  FileIO.hpp  GameEngine.hpp  Headers.hpp  joanne.hpp
Lanes/: Lane.cpp  Lane.hpp
Reference/Scene/: PlayScene.cpp
Reference/UI/Component/: InputBox.hpp
Resource/: downloaded_scoreboard.txt  scoreboard.txt
Resource/beatmaps/: ASMRZ.txt  Bling Bang.txt  Night Dancer.txt  UUUU.txt  Unforgiven.txt  beats.txt  blingbling.txt  magnetic.txt  night.txt  night_dancer.txt  perfect_night_easy.txt  racing.txt  racing_night.txt  test.txt  unforgiven.txt  waiting_for_love.txt
Resource/highscores/: ASMRZ.txt  ASMRZHard.txt  ASMRZNormal.txt  Bling Bang.txt  Bling BangHard.txt  Bling BangNormal.txt  Night DancerHard.txt  Perfect Night.txt  Perfect NightEasy.txt  Perfect NightHard.txt  Perfect NightNormal.txt  Waiting for LoveHard.txt
Scene/: MainMenu.cpp  MainMenu.hpp  MusicSelection.cpp  MusicSelection.hpp  PlayScene.cpp  PlayScene.hpp  ScoreBoardScene.cpp  ScoreBoardScene.hpp  Scoreboard.cpp  Scoreboard.hpp  Settings.cpp  Settings.hpp  WinScene.cpp  WinScene.hpp
UI/Component/: Beat.cpp  Beat.hpp  ImageButton.cpp  ImageButton.hpp  InputBox.cpp  InputBox.hpp  MusicBlock.cpp  MusicBlock.hpp  Slider.cpp
pythonfiles/: ASMRZ.txt  beats.txt  beatsgen.py  blingbling.txt  download.py  key.json  magnetic.txt  night.txt  night_dancer.txt  racing_night.txt  unforgiven.txt  upload.py  upload.spec  waiting_for_love.txt
